trying to fix mobile display problem

--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -68,7 +68,7 @@
                     <label id="ljms_LABEL_15">
                       公历生日:
                     </label>
-                    <input class="form-control datepicker" type="text" id="ljms_INPUT_16" name="birthday"/>
+                    <input class="form-control datepicker" readonly="true" type="text" id="ljms_INPUT_16" name="birthday"/>
                     <label id="ljms_LABEL_18">
                       时辰：
                     </label>
