--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=2,width=device-width,height=device-height,target-densitydpi=device-dpi,user-scalable=yes" />
+  <meta name="viewport" content="initial-scale=1, user-scalable=yes" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
