--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -8,7 +8,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=0.5, user-scalable=yes" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -30,7 +29,7 @@
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
               <div class="container">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="/">缘中秀在线排盘系统</a>
+                  <a class="navbar-brand" href="/">缘中秀在线排盘系统aaa</a>
                 </div>
               </div>
             </nav>
