--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>缘中秀在线排盘系统</title>
   <meta name="description" content="">
+  <meta name="viewport" content="width=500px">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
